--- a/web/main.css
+++ b/web/main.css
@@ -13,7 +13,7 @@ body {
     background: -webkit-linear-gradient(to right,#24bec9,#2466c9);/* Делаем градиент*/
     background:  linear-gradient(45deg, #a8edea, #fed6e3);
 
-    color:azure;/*фон приложения*/
+    color:white;/*фон приложения*/
     padding: 50px;
 
 
